--- a/index.html
+++ b/index.html
@@ -5,73 +5,100 @@
     <meta charset="utf-8">
     <title>Styles Conference</title>
     <link rel="stylesheet" href="assets/stylesheets/main.css">
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lato:100,300,400">
   </head>
 
   <body>
 
     <!-- Header -->
-    <header class="container">
-       <h1>Styles Conference</h1>
-      <h3>August 24&ndash;26thth &mdash; Chicago, IL</h3>
-      <nav>
-        <a href="index.html">Home</a>
-        <a href="speakers.html">Speakers</a>
-        <a href="schedule.html">Schedule</a>
-        <a href="venue.html">Venue</a>
-        <a href="register.html">Register</a>
+
+    <header class="primary-header container group">
+
+      <h1 class="logo">
+        <a href="index.html">Styles <br> Conference</a>
+      </h1>
+
+      <h3 class="tagline">August 24&ndash;26th &mdash; Chicago, IL</h3>
+
+      <nav class="nav primary-nav">
+        <ul>
+          <li><a href="index.html">Home</a></li><!--
+          --><li><a href="speakers.html">Speakers</a></li><!--
+          --><li><a href="schedule.html">Schedule</a></li><!--
+          --><li><a href="venue.html">Venue</a></li><!--
+          --><li><a href="register.html">Register</a></li>
+        </ul>
       </nav>
-      
 
     </header>
+
     <!-- Hero -->
-   
+
+    <section class="hero container">
+
+      <h2>Dedicated to the Craft of Building Websites</h2>
+
+      <p>Every year the brightest web designers and front-end developers descend on Chicago to discuss the latest technologies. Join us this August!</p>
+
+      <a class="btn btn-alt" href="register.html">Register Now</a>
+
+    </section>
+
     <!-- Teasers -->
 
-    <section class="container">
+    <section class="row">
+      <div class="grid">
 
-      <section>
-        <h2>Dedicated to the cratf of building Websites</h2>
-        <p>Every year the brightest web designers and front-end developers descend on Chicago to discuss the latest technologies. Join us this August!</p>
-        <a class="btn btn-alt" href="register.html">Register Now</a>
-        <a href="emailto:vnuwaha@gmail.com?subject=Reaching%20Out%20About%20Conference&body=How%20%Are%20You">Email Me</a>
-      </section>
+        <!-- Speakers -->
 
-      <section>
-        <a href="speakers.html">
+        <section class="teaser col-1-3">
           <h5>Speakers</h5>
-          <h3>World-Class Speakers</h3>
-        </a>
-        <p>Joining us from all around the world are over twenty fantastic speakers, here to share their stories.</p>
-      </section>
+          <a href="speakers.html">
+            <img src="assets/images/home/speakers.jpg" alt="Professional Speaker">
+            <h3>World-Class Speakers</h3>
+          </a>
+          <p>Joining us from all around the world are over twenty fantastic speakers, here to share their stories.</p>
+        </section><!--
 
-      <section>
-        <a href="schedule.html">
+        Schedule
+
+        --><section class="teaser col-1-3">
           <h5>Schedule</h5>
-          <h3>Three Inspiring Days</h3>
-        </a>
-        <p>Enjoy three inspiring and action-packed days of talks, gatherings, and all-around good times.</p>
-      </section>
+          <a href="schedule.html">
+            <img src="assets/images/home/schedule.jpg" alt="Conference Attendees">
+            <h3>Three Inspiring Days</h3>
+          </a>
+          <p>Enjoy three inspiring and action-packed days of talks, gatherings, and all-around good times.</p>
+        </section><!--
 
-      <section>
-        <a href="venue.html">
+        Venue
+
+        --><section class="teaser col-1-3">
           <h5>Venue</h5>
-          <h3>The Chicago Theatre</h3>
-        </a>
-        <p>Within the heart of downtown Chicago, The Chicago Theatre will provide a beautiful conference venue.</p>
-      </section>
+          <a href="venue.html">
+            <img src="assets/images/home/venue.jpg" alt="The Chicago Theatre">
+            <h3>The Chicago Theatre</h3>
+          </a>
+          <p>Within the heart of downtown Chicago, The Chicago Theatre will provide a beautiful conference venue.</p>
+        </section>
 
+      </div>
     </section>
 
     <!-- Footer -->
 
-    <footer class="container">
+    <footer class="primary-footer container group">
+
       <small>&copy; Styles Conference</small>
-      <nav>
-        <a href="index.html">Home</a>
-        <a href="speakers.html">Speakers</a>
-        <a href="schedule.html">Schedule</a>
-        <a href="venue.html">Venue</a>
-        <a href="register.html">Register</a>
+
+      <nav class="nav">
+        <ul>
+          <li><a href="index.html">Home</a></li><!--
+          --><li><a href="speakers.html">Speakers</a></li><!--
+          --><li><a href="schedule.html">Schedule</a></li><!--
+          --><li><a href="venue.html">Venue</a></li><!--
+          --><li><a href="register.html">Register</a></li>
+        </ul>
       </nav>
 
     </footer>
