nasa image fetch

--- a/class/class27-materials/api-template/index.html
+++ b/class/class27-materials/api-template/index.html
@@ -5,22 +5,24 @@
     	<meta name="description" content="This is where your description goes">
     	<meta name="keywords" content="one, two, three">
 
-		<title>Title in the tab</title>
+		<title>NASA Photo of the Day</title>
 
 		<!-- external CSS link -->
 		<link rel="stylesheet" href="css/normalize.css">
 		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
-
 		<h1>Picture Of The Day</h1>
-		<input type="date" name="" value="">
-		<button type="button" name="button">Get Media</button>
+		<div class ="picture-container">
+			<input class ="input-date" type="date" name="" value="" class="image">
+			<button class ="media-button"type="button" name="button">Get Media</button>
+	
+			<h2>NASA Rules!</h2>
+			<img src="img/pokemon.jpeg" alt="">
+			<iframe src="" frameborder="0"></iframe>
+			<h3>Explanation</h3>
+		</div>
 
-		<h2>NASA RULES!</h2>
-		<img src="img/pokemon.jpeg" alt="">
-		<iframe src="" frameborder="0"></iframe>
-		<h3>Explanation</h3>
 	
 
 		<script type="text/javascript" src="js/main.js"></script>
