--- a/class/class27-materials/local-storage-botScore-button/index.html
+++ b/class/class27-materials/local-storage-botScore-button/index.html
@@ -1,25 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-    	<meta charset="utf-8">
-    	<meta name="description" content="This is where your description goes">
-    	<meta name="keywords" content="one, two, three">
 
-		<title>Cards</title>
+<head>
+	<meta charset="utf-8">
+	<meta name="description" content="This is where your description goes">
+	<meta name="keywords" content="one, two, three">
 
-		<!-- external CSS link -->
-		<link rel="stylesheet" href="css/normalize.css">
-		<link rel="stylesheet" href="css/style.css">
-	</head>
-	<body>
-		<h1>Card Game</h1>
-		<h2>Player 1</h2>
-		<img id="player 1" alt="playing card">
+	<title>Title in the tab</title>
 
-		<h2>payer 2</h2>
-		<img id ="player 2", alt ="playing Card">
+	<!-- external CSS link -->
+	<link rel="stylesheet" href="css/normalize.css">
+	<link rel="stylesheet" href="css/style.css">
+</head>
 
-		<script type="text/javascript" src="js/main.js"></script>
-		<input value="winner" label="{$player one wins"}/>
-	</body>
+<body>
+
+	<h1>Picture Of The Day</h1>
+	<input type="date" name="" value="">
+	<button type="button" name="button">Get Media</button>
+
+	<h2>NASA RULES!</h2>
+	<img src="img/pokemon.jpeg" alt="">
+	<iframe src="" frameborder="0"></iframe>
+	<h3>Explanation</h3>
+
+
+	<script type="text/javascript" src="js/main.js"></script>
+</body>
+
 </html>
