--- a/class/class27-materials/api-template/index.html
+++ b/class/class27-materials/api-template/index.html
@@ -1,30 +1,36 @@
+
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-    	<meta charset="utf-8">
-    	<meta name="description" content="This is where your description goes">
-    	<meta name="keywords" content="one, two, three">
 
-		<title>NASA Photo of the Day</title>
+<head>
+	<meta charset="utf-8">
+	<meta name="description" content="This is where your description goes">
+	<meta name="keywords" content="one, two, three">
 
-		<!-- external CSS link -->
-		<link rel="stylesheet" href="css/normalize.css">
-		<link rel="stylesheet" href="css/style.css">
-	</head>
-	<body>
+	<title>NASA Picture of the day</title>
+
+	<!-- external CSS link -->
+	<!-- <link rel="stylesheet" href="css/normalize.css"> -->
+	<link rel="stylesheet" href="css/style.css">
+</head>
+
+<body>
+	<header class="header">
 		<h1>Picture Of The Day</h1>
-		<div class ="picture-container">
-			<input class ="input-date" type="date" name="" value="" class="image">
-			<button class ="media-button"type="button" name="button">Get Media</button>
-	
-			<h2>NASA Rules!</h2>
-			<img src="img/pokemon.jpeg" alt="">
+		<input type="date" name="" value="">
+		<button type="button" name="button">Get Media</button>
+		<h2>NASA RULES!</h2>
+	</header>
+	<div class="picture-container">
+		<div class="image-video-container">
+						<img src="img/pokemon.jpeg" alt="">
 			<iframe src="" frameborder="0"></iframe>
-			<h3>Explanation</h3>
 		</div>
+		<div class="text-description">
+			<p>Explanation</p>
+		</div>
+	</div>
+	<script type="text/javascript" src="js/main.js"></script>
+</body>
 
-	
-
-		<script type="text/javascript" src="js/main.js"></script>
-	</body>
 </html>
