Changed to flex display

--- a/class/class27-materials/api-template/index.html
+++ b/class/class27-materials/api-template/index.html
@@ -27,6 +27,8 @@
 			<iframe src="" frameborder="0"></iframe>
 		</div>
 		<div class="text-description">
+			<h2 class="title"></h2>
+			<h2 class="date"></h2>
 			<p>Explanation</p>
 		</div>
 	</div>
